[package]
name = "ivy-random"
version = "0.10.3"
edition = "2021"
description = "Provides random utility functions to the ivy framework"
license-file.workspace = true

keywords = ["rand", "random", "linear-algebra", "vector"]
documentation = "https://lib.rs/ivy-random"
repository = "https://github.com/ten3roberts/ivy"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0"
glam = "0.30"
