[package]
name = "ivy-rendergraph"
version = "0.10.0"
edition = "2018"

license-file = "../LICENSE"
keywords = [ "high-level", "rendergraph", "vulkan", "graphics", "parallel" ]
documentation = "https://lib.rs/ivy-rendergraph"
repository = "https://github.com/ten3roberts/ivy"
readme = "./README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
hecs = "0.7.3"
itertools = "0.10.3"
ivy-base = { path = "../ivy-base", version = "0.10.0" }
ivy-graphics = { path = "../ivy-graphics", version = "0.10.0" }
ivy-resources = { path = "../ivy-resources", version = "0.10.0" }
ivy-vulkan = { path = "../ivy-vulkan", version = "0.10.0" }
ivy-window = { path = "../ivy-window", version = "0.10.0" }
records = "0.1.1"
slotmap = "1.0.6"
thiserror = "1.0.30"
