[package]
name = "ivy-rendergraph"
version = "0.10.3"
edition = "2021"

license-file = "../LICENSE"
keywords = ["high-level", "rendergraph", "vulkan", "graphics", "parallel"]
documentation = "https://lib.rs/ivy-rendergraph"
repository = "https://github.com/ten3roberts/ivy"
readme = "./README.md"
description = "Easy to use declarative rendergraph for vulkan and Ivy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
itertools.workspace = true
ivy-base = { path = "../ivy-base", version = "0.10.0" }
ivy-graphics = { path = "../ivy-graphics", version = "0.10.0" }
ivy-assets = { path = "../ivy-assets", version = "0.10.0" }
ivy-vulkan = { path = "../ivy-vulkan", version = "0.10.0" }
ivy-window = { path = "../ivy-window", version = "0.10.0" }
glam.workspace = true
slotmap.workspace = true
thiserror.workspace = true
flax.workspace = true
parking_lot.workspace = true
