[package]
name = "ivy-resources"
version = "0.10.3"
authors = ["Tim Roberts <ten3roberts@gmail.com>"]
edition = "2021"
description = "Handle based resource management and shared state"


license-file = "../LICENSE"
keywords = ["resources", "handle", "shared", "state"]
documentation = "https://lib.rs/ivy-resources"
repository = "https://github.com/ten3roberts/ivy"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_refcell = "0.1.8"
derive_more = "0.99.17"
hecs = "0.7.6"
hecs-schedule = "0.6.1"
parking_lot = "0.12.0"
slotmap = "1.0.6"
smallvec = "1.8.0"
thiserror = "1.0.31"
serde = { workspace = true, optional = true }

[features]
default = []
serialize = ["serde"]
