[package]
name = "ivy-resources"
version = "0.10.3"
authors = ["Tim Roberts <ten3roberts@gmail.com>"]
edition = "2021"
description = "Handle based resource management and shared state"


license-file = "../LICENSE"
keywords = ["resources", "handle", "shared", "state"]
documentation = "https://lib.rs/ivy-resources"
repository = "https://github.com/ten3roberts/ivy"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_refcell.workspace = true
flax.workspace = true
parking_lot.workspace = true
slotmap.workspace = true
smallvec.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }

[features]
default = []
serialize = ["serde"]
