[package]
name = "ivy-scene"
version = "0.1.0"
edition = "2021"
description = "Scenes and cross libary scene management for the Ivy game engine"

[dependencies]
ivy-core = { path = "../ivy-core" }
ivy-wgpu = { path = "../ivy-wgpu" }
ivy-gltf = { path = "../ivy-gltf" }
ivy-assets = { path = "../ivy-assets" }

tracing.workspace = true
flax.workspace = true
