[package]
name = "ivy-stb"
version = "0.1.0"
authors = ["Tim Roberts <ten3roberts@gmail.com>"]
edition = "2018"
description = "stb library bindings for Ivy."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.89"

[build-dependencies]
cc = "1.0"
