[package]
name = "ivy-templates"
version = "0.10.3"
edition = "2021"
description = "Provides "

license-file = "../LICENSE"
keywords = [ "reuse", "template", "spawning" ]
documentation = "https://lib.rs/ivy-templates"
repository = "https://github.com/ten3roberts/ivy"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_refcell = "0.1.8"
derive_more = "0.99.17"
hecs = "0.7.5"
hecs-schedule = "0.6.0"
hecs-hierarchy = "0.11.3"
parking_lot = "0.12.0"
slotmap = "1.0.6"
thiserror = "1.0.30"
ivy-base = { path = "../ivy-base", version = "*" }
serde = { version = "1.0.136", features = [ "derive" ], optional = true }

[features]
default = []
serialize = [ "serde" ]
