[package]
name = "ivy-ui"
version = "0.10.3"
authors = ["Tim Roberts <ten3roberts@gmail.com>"]
edition = "2021"
description = "GUI library for Ivy"
readme = "README.md"

license-file = "../LICENSE"
keywords = ["graphics", "ui", "game-engine", "game", "vulkan"]
documentation = "https://lib.rs/ivy-ui"
repository = "https://github.com/ten3roberts/ivy"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ivy-base = { path = "../ivy-base", version = "0.10.0" }
ivy-image = { path = "../ivy-image", version = "0.10.0" }
ivy-input = { path = "../ivy-input", version = "0.10.0" }
ivy-vulkan = { path = "../ivy-vulkan", version = "0.10.0" }
ivy-window = { path = "../ivy-window", version = "0.10.0" }
ivy-graphics = { path = "../ivy-graphics", version = "0.10.0" }
ivy-resources = { path = "../ivy-resources", version = "0.10.0" }
ivy-rendergraph = { path = "../ivy-rendergraph", version = "0.10.0" }

ezy = "0.1.1"
glfw = "0.44.0"
fontdue = "0.7.2"
flax.workspace = true
glam.workspace = true
flume.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }

[features]
default = []
serialize = ["serde", "glam/serde"]
