[package]
name = "ivy-vulkan"
version = "0.10.3"
authors = ["Tim Roberts <ten3roberts@gmail.com>"]
edition = "2021"
description = "Low level vulkan abstractions for the Ivy game engine."

license-file = "../LICENSE"
keywords = ["low-level", "graphics", "windowing", "game", "vulkan"]
documentation = "https://lib.rs/ivy-vulkan"
repository = "https://github.com/ten3roberts/ivy"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.36.0"
glfw = { version = "0.44.0", features = ["vulkan"] }
gpu-allocator = "0.17.0"
ivy-image = { path = "../ivy-image", version = "0.10.0" }
ivy-resources = { path = "../ivy-resources", version = "0.10.0" }
ivy-base = { path = "../ivy-base", version = "0.10.0" }
log = "0.4.17"
parking_lot.workspace = true
smallvec = "1.8.0"
spirv-reflect = "0.2.3"
thiserror.workspace = true
glam.workspace = true
serde = { workspace = true, optional = true }
bitflags = "1.3.2"

[features]
default = []
serialize = ["serde", "glam/serde"]
