[package]
name = "ivy-wgpu"
version = "0.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ivy-core = { path = "../ivy-core" }
ivy-wgpu-types = { path = "../ivy-wgpu-types" }
ivy-assets = { path = "../ivy-assets" }
ivy-input = { path = "../ivy-input" }
ivy-gltf = { path = "../ivy-gltf" }

winit.workspace = true
wgpu.workspace = true
bytemuck.workspace = true
glam.workspace = true
flax.workspace = true
anyhow.workspace = true
tracing.workspace = true
puffin.workspace = true
image.workspace = true
puffin_http.workspace = true
flume.workspace = true
itertools.workspace = true
futures.workspace = true
gltf.workspace = true
slab.workspace = true
slotmap.workspace = true
mikktspace.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
