[package]
name = "ivy-wgpu"
version = "0.10.0"
edition = "2021"
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ivy-core = { path = "../ivy-core" }
ivy-wgpu-types = { path = "../ivy-wgpu-types" }
ivy-assets = { path = "../ivy-assets" }
ivy-input = { path = "../ivy-input" }
ivy-gltf = { path = "../ivy-gltf" }
ivy-graphics = { path = "../ivy-graphics" }

atomic_refcell.workspace = true
async-std.workspace = true
parking_lot.workspace = true
naga_oil.workspace = true
winit.workspace = true
wgpu = { workspace = true, features = [ "naga-ir" ]}
bytemuck.workspace = true
glam.workspace = true
flax.workspace = true
anyhow.workspace = true
tracing.workspace = true
image.workspace = true
flume.workspace = true
itertools.workspace = true
futures.workspace = true
gltf.workspace = true
slab.workspace = true
slotmap.workspace = true
mikktspace.workspace = true
rayon.workspace = true
ordered-float.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
tracing-subscriber.workspace = true

[features]
serde = [ "dep:serde", "wgpu/serde" ]
