[package]
name = "ivy-window"
version = "0.10.3"
edition = "2021"
description = "GLFW window wrapper"

license-file = "../LICENSE"
keywords = ["glfw", "graphics", "windowing", "game", "vulkan"]
documentation = "https://lib.rs/ivy-window"
repository = "https://github.com/ten3roberts/ivy"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ivy-base = { path = "../ivy-base", version = "0.10.0" }
ivy-vulkan = { path = "../ivy-vulkan", version = "0.10.0" }

ash = "0.36.0"
glam = "0.27"
glfw.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
tracing.workspace = true
