[package]
name = "sandbox"
version = "0.1.0"
authors = ["Tim Roberts <ten3roberts@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
flume = "0.10"
hecs = "0.6"
ivy-base = { path = "../../ivy-base", version = "0.1.0" }
log = "0.4"
rand = "0.8"
