[package]
name = "vulkan"
version = "0.1.0"
authors = ["Tim Roberts <ten3roberts@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.10"
glfw = { version = "0.41.0", features = [ "vulkan" ] }
hecs = "0.5"
ivy-core = { path = "../../ivy-core", version = "0.1.0" }
ivy-graphics = { path = "../../ivy-graphics", version = "0.1.0" }
ivy-vulkan = { path = "../../ivy-vulkan", version = "0.1.0" }
log = "0.4"
ultraviolet = "0.8"
